--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,7 @@ on:
     tags: [ 'latest' ]
   pull_request:
     branches: [ main ]
-  watch:
-    types: started
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -28,7 +27,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
     permissions:
       contents: read
       packages: write
@@ -68,7 +66,6 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
