--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - UU_LAN_GATEWAY=10.0.0.1
       - UU_LAN_DNS=10.0.0.1
     privileged: true
+    volumes:
+      - uu_data:/tmp/uu
     networks:
       bridge-host:
           ipv4_address: 10.0.0.244
@@ -23,3 +25,5 @@ networks:
         - subnet: 10.0.0.0/24
           ip_range: 10.0.0.0/24
           gateway: 10.0.0.1
+volumes:
+  uu_data:
